# stockin_api_go

./: .air.toml  .env  .gitignore  Cargo.toml  Makefile  compose.yaml  docker-compose.app.yaml  docker-compose.deploy.yaml  docker-compose.yaml  go.mod  go.sum  schema.sql  sqlboiler.toml  sqlc.yaml  sqlx-data.json
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  docker-compose.yaml
.github/workflows/: cd.yaml  ci.yaml
cmd/api/: main.go
cmd/seed/: main.go
docker/: Dockerfile  compose.yaml  docker-compose.yaml
docker/deploy/: Dockerfile
docker/dev/: Dockerfile
docker/release/: Dockerfile  compose.yaml
docker/test/: Dockerfile  compose.yaml
domain/: db.go  db_test.go  item.go  item_params.go  item_range_params.go  item_tag.go  item_tag_params.go  item_test.go  tag.go  tag_params.go  thumbnail.go  title.go  type.go  util.go  uuid.go
handler/: item.go  thumbnail.go  title.go  type.go  util.go
handlers/: app.go  item.go  query.go  response.go
internal/: init.go  item.go  testutil.go
models/: boil_suites_test.go  boil_table_names.go  items.go  items_test.go  mysql_suites_test.go  psql_suites_test.go
queries/: item.sql.go  item_tag.sql.go  models.go  tag.sql.go
sql/: item.sql  item_tag.sql  tag.sql
src/: handler.rs  item.rs  lib.rs  main.rs  repo.rs
src/handler/: auth.rs  item.rs  response.rs  title.rs
src/repo/: item.rs
tests/: item.rs  item_test.go  sample.rs
tests/common/: mod.rs
usecases/: item.go
