[package]
name = "stockin_api"
version = "0.1.0"
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.2.6"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.1", features = ["trace"] }
