[package]
name = "stockin_api"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.5.5"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
log = "0.4"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
scraper = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "mysql", "chrono", "offline"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
url = "2"

[dev-dependencies]
assert_json = "0.1"
futures = "0.3"
hyper = "0.14"
once_cell = "1"
tower = { version = "0.4", features = ["util"] }
