[package]
name = "stockin_api"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.5"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
log = "0.4.17"
reqwest = { version = "0.11.10", features = ["rustls-tls"], default-features = false }
scraper = "0.13.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "mysql", "chrono", "offline"] }
tokio = { version = "1.18.2", features = ["full"] }
tower-http = { version = "0.3.3", features = ["trace"] }
url = "2.2.2"

[dev-dependencies]
assert_json = "0.1.0"
futures = "0.3.21"
hyper = "0.14.18"
once_cell = "1.10.0"
tower = { version = "0.4.12", features = ["util"] }
